--- a/BasicGraphic/nbproject/project.properties
+++ b/BasicGraphic/nbproject/project.properties
@@ -29,10 +29,18 @@ dist.jar=${dist.dir}/BasicGraphic.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.gluegen-rt-android.jar=Lib\\gluegen-rt-android.jar
+file.reference.gluegen-rt-natives-windows-amd64.jar=Lib\\gluegen-rt-natives-windows-amd64.jar
+file.reference.jogl-all-natives-windows-amd64.jar=Lib\\jogl-all-natives-windows-amd64.jar
+file.reference.jogl-all.jar=Lib\\jogl-all.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.JOGL.classpath}
+    ${libs.JOGL.classpath}:\
+    ${file.reference.gluegen-rt-android.jar}:\
+    ${file.reference.gluegen-rt-natives-windows-amd64.jar}:\
+    ${file.reference.jogl-all-natives-windows-amd64.jar}:\
+    ${file.reference.jogl-all.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
