--- a/CompGraficaI/nbproject/project.properties
+++ b/CompGraficaI/nbproject/project.properties
@@ -30,15 +30,11 @@ dist.jar=${dist.dir}/CompGraficaI.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.gluegen-rt.jar=gluegen-rt.jar
-file.reference.jogl.jar=jogl.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
-javac.classpath=\
-    ${file.reference.gluegen-rt.jar}:\
-    ${file.reference.jogl.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
