--- a/Jogo/nbproject/project.properties
+++ b/Jogo/nbproject/project.properties
@@ -27,6 +27,7 @@ dist.dir=dist
 dist.jar=${dist.dir}/Jogo.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.CompGraficaI.jar=Libs\\CompGraficaI.jar
 file.reference.lwjgl.jar=Libs\\lwjgl.jar
 file.reference.lwjgl_util.jar=Libs\\lwjgl_util.jar
 file.reference.slick-util.jar=Libs\\slick-util.jar
@@ -35,7 +36,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.lwjgl.jar}:\
     ${file.reference.lwjgl_util.jar}:\
-    ${file.reference.slick-util.jar}
+    ${file.reference.slick-util.jar}:\
+    ${file.reference.CompGraficaI.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
